--- a/taskmaster-starter/index.html
+++ b/taskmaster-starter/index.html
@@ -65,8 +65,8 @@
           </div>
           <!-- done end -->
         </div>
-        <div id="trash" class="mt-auto">
-          <div class="w-100 bottom-trash p-3 text-center"><span class="oi oi-trash mx-auto mb-4"></span> Drop Here to Remove.</div>
+        <div id="trash" class="mt-auto  overflow-hidden">
+          <div class="w-100 p-3 text-center text-light display-4 bottom-trash d-flex"><div class="m-auto py-2"><span class="oi oi-trash"></span> Drop Here to Remove.</div></div>
         </div>
       </main>
     </div>
